--- a/app/views/media/show.html.erb
+++ b/app/views/media/show.html.erb
@@ -12,8 +12,13 @@
 
 <p>
   <b>Impact:</b>
-  <%= @medium.impact %>
+  <%= @medium.impact_id %>
 </p>
+<p>
+  <b>Unit:</b>
+  <%= @medium.unit_id %>
+</p>
+
 
 
 <%= link_to 'Edit', edit_medium_path(@medium) %> |
