--- a/app/views/simulations/_form.html.erb
+++ b/app/views/simulations/_form.html.erb
@@ -15,10 +15,32 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
-  <div class="field">
-    <%= f.label :facilitator_id %><br />
-    <%= f.number_field :facilitator_id %>
-  </div>
+
+    <%= f.hidden_field :facilitator_id ,:value=>@facilitator.id%>
+
+
+
+    <div class="field">
+      <%= f.label :product_id %><br />
+      <%= f.select :product_id,Product.all.collect{|p|[p.name,p.id]} %>
+    </div>
+
+
+
+    <div class="field">
+      <%= f.label :freight_cost %><br />
+      <%= f.number_field :freight_cost %>
+    </div>
+
+
+
+    <div class="field">
+      <%= f.label :weight_per_unit %><br />
+      <%= f.number_field :weight_per_unit %>
+    </div>
+
+
+
   <div class="field">
     <%= f.label :max_players %><br />
     <%= f.number_field :max_players %>
@@ -27,6 +49,15 @@
     <%= f.label :max_rounds %><br />
     <%= f.number_field :max_rounds %>
   </div>
+
+
+  <div class="field">
+    <%= f.label :case_study_id %><br />
+    <%= f.select :case_study_id,CaseStudy.all.collect{|cs|[cs.name,cs.id]} %>
+  </div>
+
+
+
   <div class="actions">
     <%= f.submit %>
   </div>
