--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -13,8 +13,15 @@
 
   <div class="field">
     <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name,:disabled=>true %>
   </div>
+
+<div class="field">
+    <%= f.label :number_of_options %><br />
+    <%= f.text_field :number_of_options %>
+  </div>
+
+
   <div class="actions">
     <%= f.submit %>
   </div>
