--- a/app/views/market_distances/_form.html.erb
+++ b/app/views/market_distances/_form.html.erb
@@ -1,29 +1,15 @@
-<%= form_for(@market_distance) do |f| %>
-  <% if @market_distance.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@market_distance.errors.count, "error") %> prohibited this market_distance from being saved:</h2>
+<%= form_tag :action => 'create' %>
+<% @market_distances.each_with_index do |distance, index| %>
+    <%= fields_for "market_distances[#{index}]", distance do |f| %>
 
-      <ul>
-      <% @market_distance.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+        <%= f.hidden_field :source_market_id, :value=>@market.id %>
+        <%= f.select :target_market_id, Market.all.collect { |market| if market!=@market then [market.name, market.id]  else next end }.compact %>
+        <%= f.text_field :distance %>
+        <br>
+        <br>
 
-  <div class="field">
-    <%= f.label :source_market_id %><br />
-    <%= f.number_field :source_market_id %>
-  </div>
-  <div class="field">
-    <%= f.label :distance_market_id %><br />
-    <%= f.number_field :distance_market_id %>
-  </div>
-  <div class="field">
-    <%= f.label :distance %><br />
-    <%= f.number_field :distance %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
+    <% end %>
 <% end %>
+<%= submit_tag %>
+
