The world is almost done and player tables are ready....TODO:create tables for player data

--- a/app/views/decision_parameters/define_constant_value.html.erb
+++ b/app/views/decision_parameters/define_constant_value.html.erb
@@ -7,7 +7,7 @@
         <%= f.hidden_field :mathematical_model_constant_id, :value=>@constants[index].id %>
         <%= f.hidden_field :decision_parameter_id, :value=>@decision_parameter.id %>
 
-        <%= f.label "constant # #{index}" %>
+        <%= f.label @constants[index].constant_name  %>=
         <%= f.number_field :value %>
          <br>
         <br>
