--- a/app/views/investments/show.html.erb
+++ b/app/views/investments/show.html.erb
@@ -7,13 +7,9 @@
 
 <p>
   <b>Type:</b>
-  <%= @investment.type %>
+  <%= @investment.investment_type_id %>
 </p>
 
-<p>
-  <b>Roi:</b>
-  <%= @investment.roi %>
-</p>
 
 
 <%= link_to 'Edit', edit_investment_path(@investment) %> |
