--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -2,9 +2,8 @@
 
 <table>
   <tr>
-    <th>Type</th>
-    <th>Tenure</th>
-    <th>Interest rate</th>
+    <th>Name</th>
+    <th>Loan type</th>
     <th></th>
     <th></th>
     <th></th>
@@ -12,9 +11,8 @@
 
 <% @loans.each do |loan| %>
   <tr>
-    <td><%= loan.type %></td>
-    <td><%= loan.tenure %></td>
-    <td><%= loan.interest_rate %></td>
+    <td><%= loan.name %></td>
+    <td><%= loan.loan_type_id %></td>
     <td><%= link_to 'Show', loan %></td>
     <td><%= link_to 'Edit', edit_loan_path(loan) %></td>
     <td><%= link_to 'Destroy', loan, confirm: 'Are you sure?', method: :delete %></td>
