--- a/app/views/loans/show.html.erb
+++ b/app/views/loans/show.html.erb
@@ -1,18 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Type:</b>
-  <%= @loan.type %>
+  <b>Name:</b>
+  <%= @loan.name %>
 </p>
 
 <p>
-  <b>Tenure:</b>
-  <%= @loan.tenure %>
-</p>
-
-<p>
-  <b>Interest rate:</b>
-  <%= @loan.interest_rate %>
+  <b>Loan type:</b>
+  <%= @loan.loan_type_id %>
 </p>
 
 
