--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -34,20 +34,33 @@
         <%= link_to "Manage Market Distances", markets_path %>  <br>
         <%= link_to "Manage Factories", factories_path %><br>
         <%= link_to "Manage Expense Types", expense_types_path %><br>
-        <%= link_to "My Expenses", expenses_path %><br>
         <%= link_to "Manage Media", media_path %> <br>
         <%= link_to "Manage Media Units", units_path %><br>
         <%= link_to "Manage Media Impacts", impacts_path %><br>
+        <%= link_to "Manage Constants", constants_path %><br>
+        <%= link_to "Manage Investment Types", investment_types_path %><br>
+        <%= link_to "Manage Loan Types", loan_types_path %><br>
 
-        `
+
+
+
         <!--admin view-->
     <% elsif current_user.admin %>
         <%= link_to "Manage Clients", clients_path %><br>
         <%= link_to "Manage Facilitators", facilitators_path %><br>
         <%= link_to "Manage Environmental Parameters", environmental_parameters_path %><br>
         <%= link_to "Manage Decision Parameters", decision_parameters_path %><br>
-        <%= link_to "Manage HR Incentives", hrincentives_path %><br>
-        <%= link_to "Manage Media Plans", media_plans_path %>
+        <%= link_to "Manage Media Plans", media_plans_path %><br>
+        <%= link_to "Manage Consumer Categories", consumer_categories_path %><br>
+        <%= link_to "Manage Employee Category", employee_categories_path %><br>
+        <%= link_to "Manage Expenses", expenses_path %><br>
+        <%= link_to "Manage Investments", investments_path %><br>
+        <%= link_to "Manage Loans", loans_path %><br>
+        <%= link_to "Mass Upload Users", imports_path %><br>
+        <%= link_to "Default Player Data",new_default_player_datum_path %>
+
+
+
 
 
 
@@ -56,8 +69,8 @@
         <%= link_to "Manage My Facilitator Groups", facilitator_groups_path %><br>
         <%= link_to "Manage My Case Studies", case_studies_path %><br>
         <%= link_to "Manage My Simulations", simulations_path %><br>
-        <%= link_to "View Expenses", expense_types_path %>
-
+        <%= link_to "View Expenses", expense_types_path %> <br>
+        <%= link_to "Manage Games", games_path %>
 
 
 
