--- a/app/views/investments/index.html.erb
+++ b/app/views/investments/index.html.erb
@@ -4,7 +4,7 @@
   <tr>
     <th>Name</th>
     <th>Type</th>
-    <th>Roi</th>
+
     <th></th>
     <th></th>
     <th></th>
@@ -13,8 +13,8 @@
 <% @investments.each do |investment| %>
   <tr>
     <td><%= investment.name %></td>
-    <td><%= investment.type %></td>
-    <td><%= investment.roi %></td>
+    <td><%= investment.investment_type_id %></td>
+
     <td><%= link_to 'Show', investment %></td>
     <td><%= link_to 'Edit', edit_investment_path(investment) %></td>
     <td><%= link_to 'Destroy', investment, confirm: 'Are you sure?', method: :delete %></td>
