--- a/app/views/consumer_categories/show.html.erb
+++ b/app/views/consumer_categories/show.html.erb
@@ -4,7 +4,30 @@
   <b>Name:</b>
   <%= @consumer_category.name %>
 </p>
+<p>
+  <b>Price Range:</b>
+  <%= @consumer_category.price_range %>
+</p>
+
+<p>
+  <b>Dealer Push Range:</b>
+  <%= @consumer_category.dealer_push_range.class %>
+</p>
+
+<p>
+  <b>Personal taste Range:</b>
+  <%= @consumer_category.personal_taste_range.class %>
+</p>
+
+<p>
+  <b>Media Push Range:</b>
+  <%= @consumer_category.media_push_range.class %>
+</p>
+
+
+
 
 
 <%= link_to 'Edit', edit_consumer_category_path(@consumer_category) %> |
 <%= link_to 'Back', consumer_categories_path %>
+
